# Gate

./: .gitignore  CMakeLists.txt
JPET_GATE_Use_Examples/: README.md
JPET_GATE_Use_Examples/Example_1/: Geometry.mac  Main.mac  README.md  Visualisation.mac  Visualization.mac
JPET_GATE_Use_Examples/Example_2/: Actor.mac  Main.mac  Physics.mac  README.md  example2_point_source.root
JPET_GATE_Use_Examples/Example_3/: Actor.mac  Main.mac  README.md  Source.mac  example3_linear_source.root
JPET_GATE_Use_Examples/Example_4/: Actor.mac  Application.mac  Main.mac  README.md  Source.mac  example4_two_sources.root
JPET_GATE_Use_Examples/Example_5/: Actor.mac  Geometry.mac  Physics.mac  README.md  Source.mac  example5_point_source.root
JPET_GATE_Use_Examples/Example_6/: Actor.mac  ActorPhantomNEMA.mac  Application.mac  Geometry.mac  GeometryPhantomNEMA.mac  Main.mac  Physic.mac  README.md  Show.mac  SourceNEMA.mac  Visualization.mac
actors_tools/GlobalActorEventPackageReader/: CMakeLists.txt  Run.cpp  copy_dictionaries.sh
actors_tools/GlobalActorEventPackageReader/AnalysisClass/: AnalysisClass.cpp  AnalysisClass.h
actors_tools/GlobalActorEventPackageReader/AnalysisClassesManager/: AnalysisClassesManager.cpp  AnalysisClassesManager.h
actors_tools/GlobalActorEventPackageReader/Dictionaries/: Dictionaries.h
actors_tools/GlobalActorEventPackageReader/Reader/: Reader.cpp  Reader.h
actors_tools/GlobalActorEventPackageReader/UserAnalysisClasses/: GammaPairsAnalysis.cpp  GammaPairsAnalysis.h
actors_tools/GlobalActorReader/: CMakeLists.txt  GlobalActorReader.cc  GlobalActorReader.hh  README.md  Run.cc  Variable.hh
cluster_tools/jobsplitter/include/: GateMacfileParser.hh
cluster_tools/jobsplitter/src/: GateMacfileParser.cc
source/digits_hits/include/: Gate3GammaAnnihilation.hh  GateCrystalHit.hh  GateGlobalActor.hh  GateGlobalActorAdder.hh  GateGlobalActorDictionariesLinkDef.hh  GateGlobalActorDictionaryEnums.hh  GateGlobalActorDictionaryEvent.hh  GateGlobalActorDictionaryHit.hh  GateGlobalActorDictionaryTrack.hh  GateGlobalActorHit.hh  GateGlobalActorMessenger.hh  GateJPETActor.hh  GateJPETActor.hh~  GateJPETActorMessenger.hh  GateJPETGammaPolarizationActor.hh  GateJPETGammaPolarizationActorMessenger.hh  GateJPetActor.hh  GateJPetActorMessenger.hh  GateLocalActor.hh  GateRejectedVolume.hh  GateRejectedVolumeMessenger.hh  GateRestrictedVolume.hh  GateRestrictedVolumeMessenger.hh  GateToRoot.hh  GateTrajectoryNavigator.hh
source/digits_hits/src/: Gate3GammaAnnihilation.cc  GateAnalysis.cc  GateCrystalSD.cc  GateGlobalActor.cc  GateGlobalActorAdder.cc  GateGlobalActorDictionaryEnums.cc  GateGlobalActorDictionaryEvent.cc  GateGlobalActorDictionaryHit.cc  GateGlobalActorDictionaryTrack.cc  GateGlobalActorHit.cc  GateGlobalActorMessenger.cc  GateJPETActor.cc  GateJPETActor.cc~  GateJPETActorMessenger.cc  GateJPETActorMessenger.cc~  GateJPETGammaPolarizationActor.cc  GateJPETGammaPolarizationActorMessenger.cc  GateJPetActor.cc  GateJPetMessenger.cc  GateLocalActor.cc  GateRejectedVolume.cc  GateRejectedVolumeMessenger.cc  GateRestrictedVolume.cc  GateRestrictedVolumeMessenger.cc  GateSecondaryProductionActor.cc  GateToRoot.cc  GateTrajectoryNavigator.cc  GateWashOutActor.cc
source/general/include/: GateRootDefs.hh
source/general/src/: GateRootDefs.cc
source/geometry/src/: GateCylindricalPETSystem.cc  GateScannerSystem.cc
source/physics/include/: Gate3GammaAnnihilation.hh  GateGammaModelPrimaryParticleInformation.hh  GateGammaSourceModel.hh  GateJPETFiveGammasDecayModel.hh  GateJPETFourGammasDecayModel.hh  GateJPETModels.hh  GateJPETOrtoPlusPromptDecayModel.hh  GateJPETOrtoPositroniumDecayModel.hh  GateJPETParaPlusPromptDecayModel.hh  GateJPETParaPositroniumDecayModel.hh  GateJPETSingleGammaModel.hh  GateJPETSource.hh  GateJPETSourceManager.hh  GateJPETSourceMessenger.hh  GateNGammaAnnihilation.hh  GateVSource.hh  GateVSource.hh~  GateVSourceMessenger.hh
source/physics/src/: Gate3GammaAnnihilation.cc  GateBackToBack.cc  GateComptonPB.cc  GateGammaSourceModel.cc  GateJPETFiveGammasDecayModel.cc  GateJPETFourGammasDecayModel.cc  GateJPETModels.cc  GateJPETOrtoPlusPromptDecayModel.cc  GateJPETOrtoPositroniumDecayModel.cc  GateJPETParaPlusPromptDecayModel.cc  GateJPETParaPositroniumDecayModel.cc  GateJPETSingleGammaModel.cc  GateJPETSource.cc  GateJPETSourceManager.cc  GateJPETSourceMessenger.cc  GateNGammaAnnihilation.cc  GatePulseProcessorChainMessenger.cc  GateSourceMgr.cc  GateVSource.cc  GateVSource.cc~  GateVSourceMessenger.cc
